# ai-projects

./: pyproject.toml
projects/: 002-one-var-lin-reg-gd.ipynb  003-2d-bin-classification.ipynb  004-data-transformation-eda.ipynb  005-iris-knn.ipynb  006-iris-classifications.ipynb  007-titanic-survival.ipynb  01-and-or-perceptron.ipynb
projects/data/: README.md
